--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 		"release-it": "^12.6.3",
 		"rimraf": "^3.0.0",
 		"terser-webpack-plugin": "^1.3.0",
+		"trim": "^0.0.3",
 		"webpack": "^4.35.0",
 		"webpack-cli": "^3.3.4"
 	}
